WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289190
AX: VoiceOver focus pops out of the text field or gets stuck in PDFs
https://bugs.webkit.org/show_bug.cgi?id=289190
Summary
AX: VoiceOver focus pops out of the text field or gets stuck in PDFs
utku.uckun
Reported
2025-03-05 13:28:47 PST
While navigating a PDF with form fields using VoiceOver, VoiceOver focus gets stuck in the text field or pops out to the PDF page. Typing echo also doesn't work.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-05 13:29:03 PST
<
rdar://problem/146323940
>
EWS
Comment 2
2025-03-06 22:20:30 PST
Committed
291756@main
(d8e4df8c3919): <
https://commits.webkit.org/291756@main
> Reviewed commits have been landed. Closing PR #41948 and removing active labels.
EWS
Comment 3
2025-04-02 15:06:37 PDT
Committed
289651.387@safari-7621-branch
(672334176951): <
https://commits.webkit.org/289651.387@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2933 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug