AX: VoiceOver focus pops out of the text field or gets stuck in PDFs https://bugs.webkit.org/show_bug.cgi?id=289190 rdar://146323940

Reviewed by Tyler Wilcock.

-We want to build isolated tree for the main frame plugins so accessibility objects can be retrieved by assistive technologies. But we don't want to set isolated tree as root because we want PDF plugin to handle requests.
-VoiceOver expects to receive PDF annotation element as focusedUIElement instead of the WebKit text box. Therefore, when accessibilityFocusedUIElement is queried we want to return the AXAssociatedPluginParent if one exists.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::buildAccessibilityTreeIfNeeded):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:
(-[WKAccessibilityWebPageObjectBase accessibilityRootObjectWrapper:]):
(-[WKAccessibilityWebPageObjectBase setIsolatedTreeRoot:]):
* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::accessibilityFocusedUIElement):

Canonical link: https://commits.webkit.org/291756@main